--- a/Test.html
+++ b/Test.html
@@ -21,23 +21,26 @@
       elements.bat.setValue(d.bat);
       // now get the history - these could take a while
       // so we do it separately.
-      Puck.eval("history", function(d) {
+      Puck.eval("data", function(d) {
         elements.temp.setData(d);
+      Puck.eval("data1", function(d) {
+        elements.temp1.setData(d);
+      Puck.eval("data2", function(d) {
+        elements.temp2.setData(d);
+      Puck.eval("data3", function(d) {
+        elements.temp3.setData(d);
       });
     });
   }
   // Set up the controls we see on the screen    
   var elements = {
-    heading : TD.label({x:10,y:10,width:190,height:50,label:"My Dashboard"}),
+    heading : TD.label({x:10,y:10,width:190,height:50,label:"Thermal-i Dashboard"}),
     bat : TD.gauge({x:10,y:70,width:190,height:220,label:"Battery Level",value:0,min:0,max:100}),
-    temp : TD.graph({x:210,y:10,width:400,height:180,label:"Temperature"}),
-    redled : TD.toggle({x:210,y:200,width:200,height:90,label:"Red LED",value:0,onchange:function(el,v) {
-      Puck.write("LED1.write("+v+");\n");
-    }}),
-    flash : TD.button({x:420,y:200,width:190,height:90,label:"Flash!",onchange:function(){
-      Puck.write("digitalPulse(LED3,1,500);\n");
-    }}),
-    modal: TD.modal({x:10,y:10,width:600,height:430,label:"Click to connect",onchange:connectDevice})
+    temp : TD.graph({x:210,y:10,width:400,height:180,label:"Top Surface Temperature"}),
+    temp1 : TD.graph({x:210,y:200,width:400,height:180,label:"Side Surface Temperature"}),
+    temp2 : TD.graph({x:210,y:390,width:400,height:180,label:"Vinyl Temperature"}),
+    temp3 : TD.graph({x:210,y:580,width:400,height:180,label:"Pressure"}),
+    modal : TD.modal({x:10,y:10,width:600,height:430,label:"Click to connect",onchange:connectDevice})
   }
   for (var i in elements)
     document.body.appendChild(elements[i]);
